--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "test:e2e": "cross-env TEST=e2e ava --config e2e.config.js"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
-    "koa": "^2.6.2"
+    "koa": "^2.6.2",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
