--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Christoph Wagner",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "test": "jest",
     "test-watch": "jest --watch"
@@ -15,7 +15,6 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
-    "koa": "^2.6.2",
     "nuxt": "^2.0.0",
     "xml2js": "^0.4.23"
   },
