--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0",
+    "urlrouter": "^0.5.4",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
