Remove xml2js dependency

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
-    "xml2js": "^0.4.23"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0",
