Add nock for network mocking

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^24.9.0",
     "browser-env": "^3.2.5",
     "jest": "^24.9.0",
+    "nock": "^11.7.2",
     "nodemon": "^1.18.9",
     "vue-jest": "^4.0.0-0"
   }
