--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
+    "firebase": "^7.7.0",
     "nuxt": "^2.0.0",
     "timeago.js": "^4.0.2"
   },
