--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Christoph Wagner",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "test": "jest",
     "test-watch": "jest --watch"
@@ -15,17 +15,18 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.3",
     "cross-env": "^5.2.0",
+    "express": "^4.16.4",
     "nuxt": "^2.0.0",
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "nodemon": "^1.18.9",
     "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.9.0",
     "browser-env": "^3.2.5",
     "jest": "^24.9.0",
     "nock": "^11.7.2",
-    "nodemon": "^1.18.9",
     "vue-jest": "^4.0.0-0"
   }
 }
